# connect4-ai

./: Cargo.toml  README.md
src/: arrayboard.rs  bitboard.rs  lib.rs  main.rs  opening_database.rs  solver.rs  test.rs  transposition_table.rs
