[package]
name = "connect4_cli"
version = "0.1.0"
authors = ["Algorhythm-sxv"]
edition = "2018"

[lib]
name = "connect4_ai"
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossterm = "0.17"
anyhow = "1.0"
static_assertions = "1.1"
indicatif = "0.15"
byteorder = "1.3"
rayon = "1.4"

